--- a/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sarva-prastutiH/2.md
+++ b/laxyam/padyam/vIra-kathAH/madhurA-vijayam/sarva-prastutiH/2.md
@@ -718,8 +718,30 @@ so that he prickled with goosebumps.
 33. On an auspicious day, the jāta karman rites of the child were performed as directed by the priest, and the child grew in splendour like the god of fire that witnesses those rites.
 </details>
 
-आकम्पयिष्यत्ययमेकवीरः संग्रामरङ्गे सकलान।तीन्।  
-इत्येव निश्चित्य स दीर्घदर्शी नाम्ना सुतं कम्पन इत्यकार्षीत् ॥ ३४ ॥  
+**आकम्पयिष्यत्य्** अयम् एकवीरः  
+संग्राम-रङ्गे सकलान् अरातीन् ।  
+इत्य् एव निश्चित्य स दीर्घ-दर्शी  
+नाम्ना **सुतं कम्पन इत्य् अकार्षीत्** ॥+++(4)+++
+
+<details><summary>मूलम्</summary>
+
+आकम्पयिष्यत्ययमेकवीरः  
+संग्रामरङ्गे सकलानरातीन् ।  
+इत्येव निश्चित्य स दीर्घदर्शी  
+नाम्ना सुतं कम्पन इत्यकार्षीत् ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+With great prescience  
+the King knew that the boy would become  
+a warrior matched by none,  
+terrorising every one of his enemies  
+in the hurly-burly of battle,  
+and thus named him Kampana,  
+The Terrifying.
+17
+</details>
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
@@ -777,10 +799,30 @@ so that he prickled with goosebumps.
 </details>
 
 
-कल-क्वणत्-काञ्चन-किङ्किणीकं+++(5)+++  
+कल-क्वणत्-काञ्चन-+++(कटि-)+++किङ्किणीकं+++(5)+++  
 गृहाङ्गणे जानु-चरं कुमारम्।  
 आलोकयन्ताव् अमृताम्बु-राशेर्  
-मग्नाविवान्तः पितरावभूताम् ॥ ३९ ॥ +++(4)+++  
+**मग्नाव्** इवान्तः **पितराव् अभूताम्** ॥ ३९ ॥ +++(4)+++  
+
+<details><summary>मूलम्</summary>
+
+कलक्वणत्काञ्चनकिङ्किणीकं  
+गृहाङ्गणे जानुचरं कुमारम् ।  
+आलोकयन्तावमृताम्बुराशे-  
+र्मग्नाविवान्तः पितरावभूताम् ॥
+</details>
+
+
+<details><summary>Shankar & Venetia</summary>
+
+Watching their son  
+crawling on all fours in the courtyard,  
+his baby golden bells babbling blithely,  
+his parents felt as if  
+they had dived into a deep ocean of *amṛta*.
+19
+</details>
+
 
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
@@ -816,11 +858,34 @@ so that he prickled with goosebumps.
 </details>
 
 
-पशुपतिर् इव नेत्रैः सोम-सूर्याग्नि-रूपैर्  
-नय इव निरपायैः प्राभव-उत्साह-मन्त्रैः।  
-भव+++(=सृष्टिर्)+++ इव पुरुषार्थैर् धर्मकामार्थ-संज्ञैस्  
-त्रिभिर् अपि नरपालस् तैस् तनूजैर् अभासीत् ॥ ४२ ॥+++(5)+++  
+पशुपतिर् इव नेत्रैः - सोम-सूर्याग्नि-रूपैर्,  
+नय इव निरपायैः - प्राभव-उत्साह-मन्त्रैः।  
+भव+++(=सृष्टिर्)+++ इव पुरुषार्थैर् - धर्मकामार्थ-संज्ञैस्  
+त्रिभिर् अपि **नरपालस् तैस् तनूजैर् अभासीत्** ॥ ४२ ॥+++(5)+++  
 
+<details><summary>मूलम्</summary>
+
+पशुपतिरिव नेत्रैः सोमसूर्याग्निरूपै-  
+र्नय इव निरपायैः प्राभवोत्साहमन्त्रैः ।  
+भव इव पुरुषार्थैर्धर्मकामार्थसंज्ञै-  
+स्त्रिभिरपि नरपालस्तैस्तनूजैरभासीत् ॥
+</details>
+
+<details><summary>Shankar & Venetia</summary>
+
+As Śiva with his triad of eyes –  
+the moon, the sun and fire;  
+as sovereignty with its inseparable triple supports –  
+dominion, determination and counsel;  
+as this worldly life with its threefold goals  
+*dharma, kāma* and *artha* –  
+so the King shone with his three sons[^4].
+20
+
+
+[^4]: The poetess earlier described, in a verse not included here, how Bukkarāja had two more sons by Devāyī.
+
+</details>
 
 <details><summary>tiruvenkaTAchAri (Eng)</summary>
 
