--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/01.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/01.md
@@ -15,151 +15,151 @@ unicode_script: devanagari
 पुर्वापरौ तोयनिधी वगाह्य  
 स्थितः पृथिव्या इव मानदण्डः॥१॥
 
-यं सर्वशैलाः परिकल्प्य वत्सं  
-मेरौ स्थिते दौग्धरि दोहदक्षे।  
-भास्वन्ति रत्नानि महौषधीश्च  
-पृथूपदिष्टां दुदुहुर् धरित्रीम्॥२॥  
+यं सर्वशैलाः **परिकल्प्य वत्सं**  
+मेरौ स्थिते दौग्धरि दोह-दक्षे।  
+भास्वन्ति रत्नानि महौषधीश् च  
+पृथूपदिष्टां **दुदुहुर् धरित्रीम्**॥२॥  
 +++(अत्र विष्णुपुराणोक्तकथा।)+++
 
-**अनन्तरत्नप्रभवस्य** यस्य  
-हिमं न सौभाग्यविलोपि जातम्।  
-एको हि दोषो गुणसन्निपाते  
-निमज्जतीन्दोः किरणेष्विवाङ्कः॥३॥  
+अनन्त-रत्न-प्रभवस्य यस्य  
+**हिमं न सौभाग्य-विलोपि** जातम्।  
+एको हि **दोषो** गुण-सन्निपाते  
+**निमज्जतीन्दोः** किरणेष्विवाङ्कः॥३॥  
 +++(अ५ र५)+++
 
-यश्चाप्सरोविभ्रममण्डनानां  
-सम्पादयित्रीं शीखरैर् बिभर्ति।  
-बलाहक+++(=मेघ)+++-च्छेद-विभक्तरागाम्  
-अकालसन्ध्यामिव धातुमत्ताम्॥ १.४॥  
+यश् चाप्सरो-विभ्रम-मण्डनानां  
+सम्पादयित्रीं शीखरैर् **बिभर्ति**।  
+बलाहक+++(=मेघ)+++-च्छेद-विभक्त-रागाम्  
+अकाल-सन्ध्याम् इव **धातुमत्ताम्**॥ १.४॥  
 +++(अ५)+++
 
-आमेखलं सञ्चरतां घनानां  
-छायामधः सानुगतां निषेव्य।  
-उद्वेजिता वृष्टिभिर् आश्रयन्ते  
-श्रृङ्गाणि यस्यातपवन्ति सिद्धाः॥५॥
+आ-मेखलं सञ्चरतां **घनानां**  
+**छायाम्** अधः सानु-गतां **निषेव्य**।  
+उद्-वेजिता वृष्टिभिर् **आश्रयन्ते**  
+**श्रृङ्गाणि** यस्यातपवन्ति **सिद्धाः**॥५॥
 
-पदं तुषारस्रुतिधौतरक्तं  
-यस्मिन्नदृष्ट्वापि हतद्विपानाम्।  
-विदन्ति मार्गं नखरन्ध्रमुक्तैर्  
-मुक्ताफलैः केसरिणां किराताः॥६॥
+पदं तुषार-स्रुति-धौत-रक्तं  
+यस्मिन्न् अदृष्ट्वापि हत-द्विपानाम्।  
+**विदन्ति मार्गं** नख-रन्ध्र-मुक्तैर्  
+मुक्ता-फलैः **केसरिणां** किराताः॥६॥+++(4)+++
 
-न्यस्ताक्षरा धातुरसेन यत्र  
-भूर्जत्वचः कुञ्जरबिन्दु+++(=काये वयोविशेषभाविनः पद्मकाख्याः)+++-शोणाः।  
-व्रजन्ति विद्याधरसुन्दरीणाम्  
-अनङ्गलेखक्रिययोपयोगम्॥७॥
+न्यस्ताक्षरा धातु-रसेन यत्र  
+**भूर्ज-त्वचः** कुञ्जर-+++(वयोजन्य-पद्मकाख्य-)+++बिन्दु-शोणाः।  
+**व्रजन्ति** विद्या-धर-सुन्दरीणाम्  
+अनङ्ग-लेख-क्रियया **+उपयोगम्**॥७॥
 
 यः पूरयन् कीचक-रन्ध्रभागान्  
-दरीमुखोत्थेन समीरणेन।  
-उद्गास्यताम् इच्छति किन्नराणां  
-तान+++(=स्वरान्तरप्रवर्तको वंशवाद्यसाध्यः स्वरविशेषः)+++-प्रदायित्वमिवोपगन्तुम्॥८॥
+दरी-मुखोत्थेन समीरणेन।  
+उद्गास्यताम् **इच्छति** किन्नराणां  
+**तान+++(=स्वरान्तर-प्रवर्तको वंश-वाद्य-साध्यः स्वर-विशेषः)+++-प्रदायित्वम्** इवोपगन्तुम्॥८॥
 +++(अ५)+++
 
-कपोलकण्डूः करिभिर् विनेतुं  
-विघट्टितानां सरलद्रुमाणाम्।  
-यत्र स्नुतक्षीरतया प्रसूतः  
-सानूनि गन्धः सुरभीकरोति॥९॥
+कपोल-कण्डूः करिभिर् विनेतुं  
+विघट्टितानां सरल-द्रुमाणाम्।  
+यत्र स्नुत-क्षीरतया प्र-सूतः  
+सानूनि **गन्धः सुरभी-करोति**॥९॥
 +++(अ५)+++
 
-वनेचराणां वनितासखानां  
-दरीगृहोत्सङ्ग+++(=अभ्यन्तर)+++-निषक्तभासः।  
-भवन्ति यत्रौषधयो रजन्याम्  
-अतैलपूराः सुरतप्रदीपाः॥१०॥
+वने-चराणां वनिता-सखानां  
+दरी-गृहोत्सङ्ग+++(=अभ्यन्तर)+++-निषक्त-भासः।  
+**भवन्ति यत्रौषधयो** रजन्याम्  
+अतैलपूराः **सुरत-प्रदीपाः**॥१०॥+++(4)+++
 
 <div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga01-11-20.mp3"></div>
 
-उद्वेजयत्यङ्गुलिपार्ष्णिभागान्  
-मार्गे शिलीभूतहिमेऽपि यत्र।  
-न दुर्वहश्रोणिपयोधरार्ता  
-भिन्दन्ति मन्दां गतिमश्वमुख्यः॥११॥  
+उद्वेजयत्य् अङ्गुलि-पार्ष्णि-भागान्  
+मार्गे शिली-भूत-**हिमे ऽपि** यत्र।  
+**न** दुर्-वह-श्रोणि-पयो-धरार्ता  
+**भिन्दन्ति मन्दां गतिम्** अश्व-मुख्यः॥११॥  
 +++(न शीघ्रं यन्तीति।)+++
 
-दिवाकराद् रक्षति यो गुहासु  
-लीनं दिवाभीतमिवान्धकारम्।  
-क्षुद्रेऽपि नूनं शरणं प्रपन्ने  
-ममत्वमुच्चैःशिरसां सतीव॥१२॥  
+दिवा-कराद् **रक्षति** यो गुहासु  
+लीनं दिवा-भीतम् **इवान्धकारम्**।  
+क्षुद्रे ऽपि नूनं शरणं प्रपन्ने  
+ममत्वम् उच्चैः-शिरसां सतीव॥१२॥  
 +++(र५ अ५)+++
 
-लाङ्गूलविक्षेपविसर्पिशोभैर्  
-इतस्ततश्चन्द्रमरीचिगौरैः।  
-यस्यार्थयुक्तं गिरिराजशब्दं  
-कुर्वन्ति वालव्यजनैश्चमर्यः॥१३॥
+लाङ्गूल-विक्षेप-विसर्पि-शोभैर्  
+इतस् ततश् चन्द्र-मरीचि-गौरैः।  
+**यस्यार्थ-युक्तं गिरि-राज-शब्दं**  
+कुर्वन्ति **वाल-व्यजनैश् चमर्यः**॥१३॥
 +++(अ५)+++
 
-यत्रांशुकाक्षेपविलज्जितानां  
-यदृच्छया किंपुरुषाङ्गनानाम्।  
-दरीगृहद्वार विलम्बिम्बिम्बास्  
-तिरस्करिण्यो जलदा भवन्ति॥१४॥
+यत्रांशुकाक्षेप-विलज्जितानां  
+यद्-ऋच्छया किं-पुरुषाङ्गनानाम्।  
+दरी-गृह-द्वार-विलम्बि-बिम्बास्  
+**तिरस्करिण्यो जलदा** भवन्ति॥१४॥
 +++(र५)+++
 
-भागीरथीनिर्झरसीकराणां  
-वोढा मुहुः कम्पितदेवदारुः।  
-यद्वायुर् अन्विष्टमृगैः किरातैर्  
-आसेव्यते भिन्नशिशण्डिबर्हः॥१५॥
+भागीरथी-निर्झर-सीकराणां  
+वोढा मुहुः कम्पित-देवदारुः।  
+**यद्-वायुर्** अन्विष्ट-मृगैः किरातैर्  
+**आसेव्यते** भिन्न-शिखण्डि-बर्हः॥१५॥
 
-सप्तर्षिहस्तावचितावशेषाण्य्  
-अधो विवस्वान् परिवर्तमानः।  
-पद्मानि यस्याग्रसरोरुहाणि  
-प्रबोधयत्यूर्ध्वमुखैर्मयूखैः॥१६॥  
+सप्तर्षि-हस्तावचितावशेषाण्य्  
+अधो **विवस्वान्** परिवर्तमानः।  
+**पद्मानि** यस्याग्र-सरोरुहाणि  
+**प्रबोधयत्य्** ऊर्ध्व-मुखैर् मयूखैः॥१६॥  
 +++(सप्तर्षीणाम् उत्तरवर्तित्वाद् ऊर्ध्ववर्तित्वाच्च)+++
 
 ## प्रतिष्ठा, परिवारः
 +++(क५)+++
 
-यज्ञाङ्गयोनित्वमवेक्ष्य यस्य  
-सारं धरित्रीधरणक्षमं च।  
-प्रजापतिः कल्पितयज्ञभागं  
-शैलाधिपत्यं स्वयमन्वतिष्ठत्॥१७॥
++++(सोमादि-)+++यज्ञाङ्ग-योनित्वम् **अवेक्ष्य यस्य**  
+सारं धरित्री-धरण-क्षमं च।  
+**प्रजापतिः** कल्पित-यज्ञ-भागं  
+**शैलाधिपत्यं** स्वयम् **अन्वतिष्ठत्**॥१७॥
 
-स मानसीं मेरुसखः पितॄणां  
+स मानसीं मेरु-सखः पितॄणां  
 कन्यां कुलस्य स्थितये स्थितिज्ञः।  
-मेनां मुनीनामपि माननीयाम्  
-आत्मानुरुपां विधिनोपयेमे॥१८॥
+**मेनां** मुनीनाम् अपि माननीयाम्  
+आत्मानुरुपां **विधिनोपयेमे**॥१८॥
 
-कालक्रमेणाथ तयोः प्रवृत्ते  
-स्वरुपयोग्ये सुरतप्रसङ्गे।  
-मनोरमं यौवनमुद्वहन्त्या  
-गर्भोऽभवद्भूधरराजपत्न्याः॥१९॥
+काल-क्रमेणाथ तयोः प्रवृत्ते  
+स्वरुप-योग्ये **सुरत-प्रसङ्गे**।  
+मनोरमं यौवनम् उद्वहन्त्या  
+**गर्भो ऽभवद्** भूधरराजपत्न्याः॥१९॥
 
-असूत सा नागवधूपभोग्यं  
-मैनाकमम्भोनिधिबद्धसख्यम्।  
-क्रुद्धेऽपि पक्षच्छिदि वृत्रशत्राव्  
-अवेदनाज्ञं कुलिशक्षतानाम्॥२०॥  
+**असूत** सा नाग-वधूपभोग्यं  
+**मैनाकम्** अम्भो-निधि-बद्ध-सख्यम्।  
+क्रुद्धेऽपि पक्षच्छिदि वृत्र-शत्राव्  
+अ-वेदना-ज्ञं कुलिश-क्षतानाम्॥२०॥  
 +++(र५)+++
 
 <div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga01-21-30.mp3"></div>
 
 अथावमानेन पितुः प्रयुक्ता  
-दक्षस्य कन्या भवपूर्वपत्नी।  
-सती सती योगविसृष्टदेहा  
-तां जन्मने शैलवधूं प्रपेदे॥२१॥
+दक्षस्य कन्या भव-पूर्व-पत्नी।  
+**सती** सती योग-विसृष्ट-देहा  
+**तां जन्मने** शैलवधूं **प्रपेदे**॥२१॥
 
-सा भूधराणामधिपेन तस्यां  
-समाधिमत्याम्+++(=नियमवत्याम्)+++ उदपादि भव्या।  
-सम्यक् प्रयोगाद् अपरिक्षतायां  
-नीताव् इवोत्साहगुणेन संपत्॥२२॥  
+**सा** भू-धराणाम् अधिपेन तस्यां  
+समाधिमत्याम्+++(=नियमवत्याम्)+++ **उदपादि** भव्या।  
+सम्यक् प्रयोगाद् अ-परिक्षतायां  
+**नीताव् इवोत्साहगुणेन संपत्**॥२२॥  
 +++(अ५ र५)+++
 
-प्रसन्नदिक् पांसुविविक्तवातं  
-शङ्खस्वनानन्तरपुष्पवृष्टि।  
-शरीरिणां स्थावरजङ्गमानां  
-सुखाय तज्जन्मदिनं बभूव॥२३॥
+प्रसन्न-दिक् पांसु-विविक्त-वातं  
+शङ्ख-स्वनानन्तर-पुष्प-वृष्टि।  
+शरीरिणां स्थावर-जङ्गमानां  
+**सुखाय तज्-जन्म-दिनं** बभूव॥२३॥
 
-तया दुहित्रा सुतरां सवित्री  
-स्फुरत्प्रभामण्डलया चकासे।  
-विदूरभूमिर् नवमेघशब्दाद्  
-उद्भिन्नया रत्नशलाकयैव॥२४॥  
+तया दुहित्रा सुतरां **सवित्री**  
+स्फुरत्-प्रभामण्डलया **चकासे**।  
+विदूर-भूमिर् नव-मेघ-शब्दाद्  
+उद्भिन्नया रत्न-शलाकयैव॥२४॥  
 +++(अ५)+++
 
 ## पार्वतीवर्धनम्
 दिने दिने सा परिवर्धमाना  
 लब्धोदया चान्द्रमसीव लेखा।  
-पुपोष लावण्यमयान् विशेषाञ्  
-ज्योत्स्नान्तराणीव कलान्तराणि॥२५॥
+**पुपोष** लावण्यमयान् **विशेषाञ्**  
+ज्योत्स्नान्तराणीव कलान्तराणि॥२५॥+++(5)+++
 
-तां पार्वतीत्याभिजनेन नाम्ना  
-बन्धुप्रियां बन्धुजनो जुहाव।  
+तां **पार्वतीत्य्** आभिजनेन नाम्ना  
+बन्धुप्रियां बन्धु-जनो **जुहाव**।  
 "उ+++(विस्मये)+++ मे"ति मात्रा तपसो निषिद्धा  
-पश्चादुमाख्यां सुमुखी जगाम॥२६॥
+पश्चाद् **उमाख्यां** सुमुखी **जगाम**॥२६॥
 
 महीभृतः पुत्रवतो ऽपि दृष्टिस्  
 तस्मिन्नपत्ये न जगाम तृप्तिम्।  
