--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/01.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/01.md
@@ -162,67 +162,73 @@ unicode_script: devanagari
 पश्चाद् **उमाख्यां** सुमुखी **जगाम**॥२६॥
 
 महीभृतः पुत्रवतो ऽपि दृष्टिस्  
-तस्मिन्नपत्ये न जगाम तृप्तिम्।  
-अनन्तपुष्पस्य मधोर्+++(=वसन्तस्य)+++ हि चूते  
-द्विरेफमाला सविशेषसङ्गा॥ १.२७॥  
+तस्मिन्न् अपत्ये **न जगाम तृप्तिम्**।  
+अनन्त-पुष्पस्य मधोर्+++(=वसन्तस्य)+++ हि चूते  
+द्विरेफ-माला स-विशेष-सङ्गा॥ १.२७॥  
 +++(अ५)+++
 
-प्रभामहत्या शिखयेव दीपस्  
+प्रभा-महत्या शिखयेव दीपस्,  
 त्रिमार्गयेव त्रिदिवस्य मार्गः।  
-संस्कारवत्येव गिरा मनीषी  
-तया स पूतश्च विभूषितश्च॥२८॥  
+संस्कारवत्य् एव गिरा मनीषी  
+**तया स पूतश्** च विभूषितश् च॥२८॥  
 +++(अ५ र५)+++
 
-मन्दाकिनीसैकतवेदिकाभिः  
-सा कन्दुकैः कृत्रिमपुत्रकैश्च।  
-रेमे मुहुर्मध्यगता सखीनां  
-क्रीडारसं निर्विशतीव बाल्ये॥२९॥
+मन्दाकिनी-सैकत-वेदिकाभिः  
+सा कन्दुकैः कृत्रिम-पुत्रकैश् च।  
+**रेमे** मुहुर् मध्यगता सखीनां  
+**क्रीडा-रसं निर्विशतीव** बाल्ये॥२९॥
 
-![](../images/bioluminescent-fungii.jpg)
-तां हंसमालाः शरदीव गङ्गां  
-महौषधिं नक्तमिवात्मभासः।  
-स्थिरोपदेशामुपदेशकाले  
-प्रपेदिरे प्राक्तनजन्मविद्याः॥३०॥  
+{{< figure src="../images/bioluminescent-fungii.jpg" title="" class="thumbnail">}}
+
+तां हंस-मालाः शरदीव गङ्गां,  
+महौषधिं नक्तम् इवात्म-भासः।  
+स्थिरोपदेशाम् उपदेश-काले  
+**प्रपेदिरे प्राक्तन-जन्म-विद्याः**॥३०॥  
 +++(र५ अ५)+++
 
 <div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga01-31-43.mp3"></div>
 
-असम्भृतं मण्डनम् अङ्गयष्टेर्  
-अनासवाख्यं करणं मदस्य।  
-कामस्य पुष्पव्यतिरिक्तमस्त्रं  
-बाल्यात्परं साथ **वयः** प्रपेदे॥३१॥
+अ-सम्भृतं **मण्डनम्** अङ्ग-यष्टेर्,  
+अनासवाख्यं+++(=सुरा-रहिताख्यम्)+++ **करणं** मदस्य।  
+कामस्य पुष्प-व्यतिरिक्तम् **अस्त्रं**  
+बाल्यात् परं +++(यौवनाख्यं)+++ साथ **वयः प्रपेदे**॥३१॥
 +++(अ५)+++
 
-उन्मीलितं तूलिकयेव **चित्रं**  
-सूर्यांशुभिर् भिन्नमिवारविन्दम्।  
-बभूव तस्याश् चतुरस्र+++(=चतुष्कोण)+++शोभि  
-वपुर् विभक्तं नवयौवनेन॥३२॥
+उन्मीलितं तूलिकयेव चित्रं,  
+सूर्यांशुभिर् भिन्नम् इवारविन्दम्।  
+बभूव तस्याश् चतुर्-अस्र+++(=कोण)+++-शोभि  
+**वपुर् विभक्तं** नवयौवनेन॥३२॥
 
-अभ्युन्नताङ्गुष्ठनखप्रभाभिर्  
-निक्षेपणाद् रागमिवोद्गिरन्तौ।  
-आजह्रतुस् **तच्चरणौ** पृथिव्यां  
-स्थलारविन्दश्रियम् अव्यवस्थाम्॥३३॥
+अभ्युन्नताङ्गुष्ठ-नख-प्रभाभिर्  
+निक्षेपणाद् रागम् इवोद्गिरन्तौ।  
+**आजह्रतुस् तच्-चरणौ** पृथिव्यां  
+**स्थलारविन्द-श्रियम्** अ-व्यवस्थाम्॥३३॥
 
 **सा राजहंसैरिव** संनताङ्गी  
-गतेषु लीलाञ्चितविक्रमेषु।  
-**व्यनीयत** प्रत्युपदेशलुब्धैर्  
-आदित्सुभिर् नूपुरसिञ्जितानि ॥३४॥  
+गतेषु लीलाञ्चित-विक्रमेषु।  
+**व्यनीयत** प्रत्युपदेश-लुब्धैर्  
+आदित्सुभिर् नूपुर-सिञ्जितानि ॥३४॥  
 +++(५)+++
 
-वृत्तानुपूर्वे+++(=वृत्तानुकारिण्य्योः)+++ च न चातिदीर्धे  
-जङ्घे शुभे सृष्टवतस् तदीये।  
-शेषाङ्गनिर्माणविधौ विधातुर्  
-लावण्य उत्पाद्य इवास यत्नः ॥३५॥  
+वृत्तानुपूर्वे+++(=वृत्तानुकारिण्योः)+++ च न चातिदीर्धे  
+**जङ्घे शुभे** सृष्टवतस् तदीये।  
+शेषाङ्ग-निर्माण-विधौ विधातुर्  
+लावण्य उत्पाद्य इवास **यत्नः** ॥३५॥  
 +++(उत्प्रेक्षा ४)+++
 
-नाग्रेन्द्रहस्तास्त्वचि कर्कशत्वाद्  
-एकान्तशैत्यात् कदलीविशेषाः।  
+**नाग्रेन्द्र-हस्तास्** त्वचि कर्कशत्वाद्,  
+एकान्त-शैत्यात् **कदली**-विशेषाः।  
 लब्ध्वापि लोके परिणाहि+++(=वैपुल्यवद्)+++ रुपं  
-जातास् तदूर्वोर् उपमानबाह्याः ॥३६॥  
+जातास् **तद्-ऊर्वोर् उपमान-बाह्याः** ॥३६॥  
 +++(४)+++
 
-एतावता नन्वनुमेयशोभि काञ्चीगुणस्थानमनिन्दितायाः।  
-आरोपितं यद् गिरिशेन पश्चादनन्यनारीकमनीयमङ्कम्॥३७॥
+{{< figure src="../images/kAnchI-guNam_sAnubandham.jpg" title="" class="thumbnail">}}
+
+
+एतावता नन्व् अनुमेय-शोभि  
+काञ्ची-गुण-स्थानम् +++(नितम्बसहितम्)+++ अनिन्दितायाः।  
+**आरोपितं** यद् +++(तपस्विना)+++ **गिरिशेन** +++(अपि)+++ पश्चाद्  
+अनन्य-नारी-कमनीयम् **अङ्कम्**॥३७॥
 
 तस्याः प्रविष्टा नतनाभिरन्ध्रं रराज तन्वी नवलोमराजिः।  
 नीवीमतिक्रम्य सितेतरस्य तन्मेखलामध्यमणेरिवार्चिः॥३८॥
