--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
@@ -17,13 +17,20 @@ title = "०१"
 तत्रभवान्कालिदासः कुमारसम्भवं काव्यं चिकीर्षुः 'आशीर्नमस्क्रिया वस्तुनिर्देशो वापि तन्मुखम्' इति शास्त्रात्काव्यादौ वक्ष्यमाणार्थानुगुणं वस्तु निर्दिशति --  
 
 अस्त्युत्तरस्यां दिशि देवतात्मा हिमालयो नाम नगाधिराजः ।  
-पुर्वापरौ तोयनिधो ' वगाह्य स्थितः पृथिव्या इव मानदण्डः ॥ 1. 1 ॥   
+पुर्वापरौ तोयनिधी वगाह्य स्थितः पृथिव्या इव मानदण्डः ॥ 1. 1 ॥   
 
 <details><summary>अन्वयः</summary>
 
 उत्तरस्यां दिशि देवतात्मा हिमालयो नाम नगाऽधिराजः पूर्वाऽपरौ तोयनिधी वगाह्य पृथिव्या मानदण्ड इव स्थितोऽस्ति।   
 </details>
-मल्लिoटीo-अस्तीति ॥ उत्तरस्यां दिशि । अनेनास्य देवभूमित्वं सूच्यते । देवतात्माधिष्ठाता यस्य सः । एतेनास्य वक्ष्यमाणमेनकापरिणयपार्वतीजननादिचेतनव्यवहारयोग्यत्वसिध्दि ।हिमस्यालयः स्थानमिति हिमालयो नाम =हिमालय इति प्रसिध्दः। अधिको राजाधिराजः । 'राजाहःसखिभ्यष्टच्' । न गच्छन्तीति नगा अचलास्तेषामधिराजो मगाधिराजोऽस्ति । कथंभूतः । पुर्वापरौ =प्राच्यपश्चिमौतीयनिधी =समुद्रौ वगाह्य =प्रविश्य । अतएव पृथिव्या भुपेर्मानं =हस्तादिना परिच्छेदः । भावे ल्युट् ।तस्य दण्डः । यव्दा मीयतेऽनेनेति मानम् । करणे ल्युट् । स चासौ दण्डश्च स इव स्थितः । आयामपरिच्छेदकदण्ड इव स्थित इत्यर्थः । पूर्वापरसागरावगाहित्वं चास्य हिमालयस्यास्त्येव । उक्तं च ब्रह्माण्डपुराणे - 'कैला सो हिमवांश्चैव दक्षिणे वर्षवर्वतौ । पूर्वपश्चिमगावेदावर्णवातरुपस्थितौ ॥ ' अत्र हिमाचलस्योभयाब्धिव्याप्तसाम्यान्मानदण्डत्वेनोत्प्रेक्षणादुत्प्रेक्षाऽलंकारः । 'प्रकृतेऽप्रकृतगुणक्रियादिसम्बन्धादप्रकृतत्वेन प्रकृतस्य संभावनमुत्प्रेक्षा'इत्यलंकारसर्वस्वकारः । अस्मिन्सर्गे प्रामेण वृत्तमुपजातिः। क्वचिदिन्द्रवज्रोपेन्द्रवज्रे च । तल्लक्षणं तु - 'स्यादिन्द्रवज्रा यदि तौ जगौ गः'। 'उतेन्द्रवज्राजतजास्ततो गौ'। अनन्तरोदीरितलक्ष्मभाजौ पादौ यदीयावुपजातयस्ताः ॥ इति ॥ 1. 1 ॥   
+
+
+<details><summary>मल्लिनाथः</summary>
+
+अस्तीति ॥ उत्तरस्यां दिशि । अनेनास्य देवभूमित्वं सूच्यते । देवतात्माधिष्ठाता यस्य सः । एतेनास्य वक्ष्यमाणमेनकापरिणयपार्वतीजननादिचेतनव्यवहारयोग्यत्वसिध्दि ।हिमस्यालयः स्थानमिति हिमालयो नाम =हिमालय इति प्रसिध्दः। अधिको राजाधिराजः । 'राजाहःसखिभ्यष्टच्' । न गच्छन्तीति नगा अचलास्तेषामधिराजो मगाधिराजोऽस्ति । कथंभूतः । पुर्वापरौ =प्राच्यपश्चिमौतीयनिधी =समुद्रौ वगाह्य =प्रविश्य । अतएव पृथिव्या भुपेर्मानं =हस्तादिना परिच्छेदः । भावे ल्युट् ।तस्य दण्डः । यव्दा मीयतेऽनेनेति मानम् । करणे ल्युट् । स चासौ दण्डश्च स इव स्थितः । आयामपरिच्छेदकदण्ड इव स्थित इत्यर्थः । पूर्वापरसागरावगाहित्वं चास्य हिमालयस्यास्त्येव । उक्तं च ब्रह्माण्डपुराणे - 'कैला सो हिमवांश्चैव दक्षिणे वर्षवर्वतौ । पूर्वपश्चिमगावेदावर्णवातरुपस्थितौ ॥ ' अत्र हिमाचलस्योभयाब्धिव्याप्तसाम्यान्मानदण्डत्वेनोत्प्रेक्षणादुत्प्रेक्षाऽलंकारः । 'प्रकृतेऽप्रकृतगुणक्रियादिसम्बन्धादप्रकृतत्वेन प्रकृतस्य संभावनमुत्प्रेक्षा'इत्यलंकारसर्वस्वकारः । अस्मिन्सर्गे प्रामेण वृत्तमुपजातिः। क्वचिदिन्द्रवज्रोपेन्द्रवज्रे च । तल्लक्षणं तु - 'स्यादिन्द्रवज्रा यदि तौ जगौ गः'। 'उतेन्द्रवज्राजतजास्ततो गौ'। अनन्तरोदीरितलक्ष्मभाजौ पादौ यदीयावुपजातयस्ताः ॥ इति ॥ 1. 1 ॥
+</details>
+
+
 इतः परं षोडशभिः श्लोकैर्हिमाद्रि वर्णयति । तत्र नगाधिराजत्वं निर्वाढमाह-   
 यं सर्वशैलाः परिकल्प्य वत्सं मेरौ स्थिते दौग्धरि दोहदक्षे ।  
 भास्वन्ति रत्नानि महैषधीश्च पृथूपदिष्टां दुदुहुर्धरित्रीम् ॥ 1. 2 ॥   
