--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
@@ -4,22 +4,56 @@ title = "०१"
 +++
 प्रथमः सर्गः  
 
-मातापितृभ्यां जगतो नमो वामार्धजानये ।  
-सद्यो दक्षिणदृक्पातसंकुचद्वामदृष्टये ॥   
-अन्तरायतिमिरोपशान्तये शान्तपावनमचिन्त्यवैभवम् ।  
-तन्नरं वपुषि, कुञ्जरं मुखे, मन्महे किमपि तुन्दिलं महः ॥   
-शरणं करवाणि शर्मदं ते चरणं वाणि! चराचरोपजीव्यम् ।  
-करुणामसृणैः कटाक्षपातैः कुरु मामम्ब!कृतार्थसार्थवाहम् ॥   
-इहान्वयमुखेनैव सर्वं व्याख्यायते मया ।  
-नामूलं लिख्यते किञ्चिन्नानपेक्षितमुच्यते ॥   
-भारती कालिदासस्य दुर्व्याख्याविषमूच्छिता ।  
-एषा सञ्जीविनी व्याख्या तामद्योज्जीवयिष्यति ॥   
-तत्रभवान्कालिदासः कुमारसम्भवं काव्यं चिकीर्षुः 'आशीर्नमस्क्रिया वस्तुनिर्देशो वापि तन्मुखम्' इति शास्त्रात्काव्यादौ वक्ष्यमाणार्थानुगुणं वस्तु निर्दिशति --  
+<details><summary>मल्लिनाथः</summary>
+
+मातापितृभ्यां जगतो  
+नमो वामार्धजानये ।  
+सद्यो दक्षिण-दृक्-पात-  
+संकुचद्-वाम-दृष्टये ॥   
+
+अन्तराय-तिमिरोपशान्तये  
+शान्तपावनम् अचिन्त्यवैभवम् ।  
+तन्नरं वपुषि, कुञ्जरं मुखे,  
+मन्महे किमपि तुन्दिलं महः ॥   
+
+शरणं करवाणि शर्मदं ते  
+चरणं वाणि! चराचरोपजीव्यम् ।  
+करुणा-मसृणैः कटाक्ष-पातैः  
+कुरु मामम्ब! कृतार्थ-सार्थ-वाहम् ॥   
+
+इहान्वय-मुखेनैव सर्वं  
+व्याख्यायते मया ।  
+नामूलं लिख्यते किञ्चिन्  
+नानपेक्षितमुच्यते ॥   
+
+भारती कालिदासस्य  
+दुर्व्याख्या-विष-मूच्छिता ।  
+एषा सञ्जीविनी व्याख्या  
+ताम् अद्योज्जीवयिष्यति ॥   
+
+तत्रभवान् कालिदासः  
+कुमारसम्भवं काव्यं चिकीर्षुः  
+
+> 'आशीर्-नमस्-क्रिया-वस्तु  
+-निर्देशो वापि तन्मुखम्' 
+
+इति शास्त्रात्  
+काव्यादौ वक्ष्यमाणार्थानुगुणं वस्तु निर्दिशति --  
+</details>
+
+
+## हिमाद्रिवर्णनम्
++++(हिमवन्महत्त्वम् अलौकिकताञ्च वक्रोक्तिभिर् वर्णयति।)+++  
++++(अ५)+++
+
+<div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga01-1-10.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अस्त्युत्तरस्यां दिशि देवतात्मा हिमालयो नाम नगाधिराजः ।  
-पुर्वापरौ तोयनिधी वगाह्य स्थितः पृथिव्या इव मानदण्डः ॥ 1. 1 ॥   
+अस्त्युत्तरस्यां दिशि **देवतात्मा**  
+हिमालयो नाम नगाधिराजः।  
+पुर्वापरौ तोयनिधी वगाह्य  
+स्थितः पृथिव्या इव मानदण्डः॥१॥   
 </details>
 
 <details><summary>मूलम्</summary>
@@ -37,19 +71,22 @@ title = "०१"
 <details><summary>मल्लिनाथः</summary>
 
 अस्तीति ॥ उत्तरस्यां दिशि । अनेनास्य देवभूमित्वं सूच्यते । देवतात्माधिष्ठाता यस्य सः । एतेनास्य वक्ष्यमाणमेनकापरिणयपार्वतीजननादिचेतनव्यवहारयोग्यत्वसिध्दि ।हिमस्यालयः स्थानमिति हिमालयो नाम =हिमालय इति प्रसिध्दः। अधिको राजाधिराजः । 'राजाहःसखिभ्यष्टच्' । न गच्छन्तीति नगा अचलास्तेषामधिराजो मगाधिराजोऽस्ति । कथंभूतः । पुर्वापरौ =प्राच्यपश्चिमौतीयनिधी =समुद्रौ वगाह्य =प्रविश्य । अतएव पृथिव्या भुपेर्मानं =हस्तादिना परिच्छेदः । भावे ल्युट् ।तस्य दण्डः । यव्दा मीयतेऽनेनेति मानम् । करणे ल्युट् । स चासौ दण्डश्च स इव स्थितः । आयामपरिच्छेदकदण्ड इव स्थित इत्यर्थः । पूर्वापरसागरावगाहित्वं चास्य हिमालयस्यास्त्येव । उक्तं च ब्रह्माण्डपुराणे - 'कैला सो हिमवांश्चैव दक्षिणे वर्षवर्वतौ । पूर्वपश्चिमगावेदावर्णवातरुपस्थितौ ॥ ' अत्र हिमाचलस्योभयाब्धिव्याप्तसाम्यान्मानदण्डत्वेनोत्प्रेक्षणादुत्प्रेक्षाऽलंकारः । 'प्रकृतेऽप्रकृतगुणक्रियादिसम्बन्धादप्रकृतत्वेन प्रकृतस्य संभावनमुत्प्रेक्षा'इत्यलंकारसर्वस्वकारः । अस्मिन्सर्गे प्रामेण वृत्तमुपजातिः। क्वचिदिन्द्रवज्रोपेन्द्रवज्रे च । तल्लक्षणं तु - 'स्यादिन्द्रवज्रा यदि तौ जगौ गः'। 'उतेन्द्रवज्राजतजास्ततो गौ'। अनन्तरोदीरितलक्ष्मभाजौ पादौ यदीयावुपजातयस्ताः ॥ इति ॥ 1. 1 ॥
+
+इतः परं षोडशभिः श्लोकैर्हिमाद्रि वर्णयति । तत्र नगाधिराजत्वं निर्वाढमाह-
 </details>
 
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इतः परं षोडशभिः श्लोकैर्हिमाद्रि वर्णयति । तत्र नगाधिराजत्वं निर्वाढमाह-   
-यं सर्वशैलाः परिकल्प्य वत्सं मेरौ स्थिते दौग्धरि दोहदक्षे ।  
-भास्वन्ति रत्नानि महैषधीश्च पृथूपदिष्टां दुदुहुर्धरित्रीम् ॥ 1. 2 ॥   
+यं सर्वशैलाः **परिकल्प्य वत्सं**  
+मेरौ स्थिते दौग्धरि दोह-दक्षे।  
+भास्वन्ति रत्नानि महौषधीश् च  
+पृथूपदिष्टां **दुदुहुर् धरित्रीम्**॥२॥  
++++(अत्र विष्णुपुराणोक्तकथा।)+++
 </details>
 
 <details><summary>मूलम्</summary>
 
-इतः परं षोडशभिः श्लोकैर्हिमाद्रि वर्णयति । तत्र नगाधिराजत्वं निर्वाढमाह-   
 यं सर्वशैलाः परिकल्प्य वत्सं मेरौ स्थिते दौग्धरि दोहदक्षे ।  
 भास्वन्ति रत्नानि महैषधीश्च पृथूपदिष्टां दुदुहुर्धरित्रीम् ॥ 1. 2 ॥   
 </details>
@@ -125,7 +162,7 @@ title = "०१"
 सिध्दा आमेखलं सञ्चरतां धनानाम् अधः सानुगतां छायां निषेव्य वृष्टिभिः उव्देजिताः (सन्तः)यस्य आतपवन्ति श्रृङ्गाणि आश्रयन्ते ।  
 </details>
 
-?    मल्लिo- आमेखलमिति ॥ सिध्दा अणिमादिसिध्दा देवयोनिविशेषाश्च । 'पिशाचो गुह्यकः सिध्दो भूतोऽमी देवयोनयः'। इत्यमरः । आमेखलाभ्य आमेखलं नितम्बपर्यन्तम् । 'मेखला खण्डबन्धे स्यात्काञ्चौशैलनितम्बयोः' इति विश्वः । 'आङ्मर्यादाभिविध्योः' इत्यव्ययीभावः । संचरतां धनानां मेधानामधः सानूनि मेधमण्डलादवस्तटानि गतां प्रात्पाम् । 'व्दितीया श्रितातोतपतितगतात्यस्तप्रात्पापन्तैः' इति समासः । छायामनातपम् । 'छाया सूर्यप्रिया कान्तिः प्रतिबिम्बमनातपः'। इत्यमरः । निषेव्यवृष्टिभिरुव्देजिताः = क्लेशिताः सन्तः । 'उव्देगस्तिमिते क्लेशे भये मन्थरगामिनि' इति शर्ब्दाणवः । यस्य हिमाद्रेरातपवन्ति सातपानि श्रृङ्गाष्याश्रयन्ते । आश्रित्य स्थिता इत्यर्थः । अतिमेघमण्डलमस्यौन्नत्यमिति भावः ।      
+मल्लिo- आमेखलमिति ॥ सिध्दा अणिमादिसिध्दा देवयोनिविशेषाश्च । 'पिशाचो गुह्यकः सिध्दो भूतोऽमी देवयोनयः'। इत्यमरः । आमेखलाभ्य आमेखलं नितम्बपर्यन्तम् । 'मेखला खण्डबन्धे स्यात्काञ्चौशैलनितम्बयोः' इति विश्वः । 'आङ्मर्यादाभिविध्योः' इत्यव्ययीभावः । संचरतां धनानां मेधानामधः सानूनि मेधमण्डलादवस्तटानि गतां प्रात्पाम् । 'व्दितीया श्रितातोतपतितगतात्यस्तप्रात्पापन्तैः' इति समासः । छायामनातपम् । 'छाया सूर्यप्रिया कान्तिः प्रतिबिम्बमनातपः'। इत्यमरः । निषेव्यवृष्टिभिरुव्देजिताः = क्लेशिताः सन्तः । 'उव्देगस्तिमिते क्लेशे भये मन्थरगामिनि' इति शर्ब्दाणवः । यस्य हिमाद्रेरातपवन्ति सातपानि श्रृङ्गाष्याश्रयन्ते । आश्रित्य स्थिता इत्यर्थः । अतिमेघमण्डलमस्यौन्नत्यमिति भावः ।      
 पदं तुषारस्त्रुतिधैतरक्तं यस्मिन्नदृष्ट्वापि हतव्दिपानाम् ।  
 
 विदन्ति मार्गं नखरन्ध्रमुक्तैर्मुक्ताफलैः केसरिणां किराताः ॥ 1. 6 ॥   
