--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/02.md
@@ -111,22 +111,25 @@ title = "०२"
 
 <details><summary>अन्वयः</summary>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
-
 हे अज ! अपाम् अन्तः यत् अमोघं बीजम् उत्पम् । अतः चराऽचरं विश्वं, तस्य प्रभवो गीयसे ।  
 </details>
-मल्लिo- यदिति ॥ न जायत इत्यजः । हे अज, अपां जलानामन्तस्त्वया यदमोघमवन्ध्यं बीजं वीर्यमुप्तं निक्षिप्तं । 'मुक्तम्' इति पाठे विसृष्टमित्यर्थः । 'शुक्रं तेजोरेतसी च बीजवीर्येन्द्रियाणि च' इत्यमरः । अतस्ते बीजाच्चराचरं स्थावरजङ्गमात्मकम् । समाहारे व्दन्व्दैकवद्भावः । विश्वं जगत् । उत्पन्नमिति शेषः । तस्य विश्वस्य । प्रभवत्यस्मादिति प्रभवः कारणं गीयसे । 'अदश्चराचरं विश्वं प्रसवस्तस्त गीयते' इति पाठे अद इदं चराचरं विश्वं तस्य बीजस्य प्रसवो गीयते । लोक इति शेषः । अत्र मनुः- अप एव  ससर्जादौ तासु बीजमवासृजत् । तदण्डमभवद्धैमं सहस्त्रांशुसमप्रभम् ॥ इति ॥ 2.5. ॥  
+
+<details><summary>मल्लिनाथः</summary>
+
+यदिति ॥ न जायत इत्यजः । हे अज, अपां जलानामन्तस्त्वया यदमोघमवन्ध्यं बीजं वीर्यमुप्तं निक्षिप्तं । 'मुक्तम्' इति पाठे विसृष्टमित्यर्थः । 'शुक्रं तेजोरेतसी च बीजवीर्येन्द्रियाणि च' इत्यमरः । अतस्ते बीजाच्चराचरं स्थावरजङ्गमात्मकम् । समाहारे व्दन्व्दैकवद्भावः । विश्वं जगत् । उत्पन्नमिति शेषः । तस्य विश्वस्य । प्रभवत्यस्मादिति प्रभवः कारणं गीयसे । 'अदश्चराचरं विश्वं प्रसवस्तस्त गीयते' इति पाठे अद इदं चराचरं विश्वं तस्य बीजस्य प्रसवो गीयते । लोक इति शेषः । अत्र मनुः- अप एव  ससर्जादौ तासु बीजमवासृजत् । तदण्डमभवद्धैमं सहस्त्रांशुसमप्रभम् ॥ इति ॥ 2.5. ॥  
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तिसृभिस्त्वमवस्थाभिर्महिमानमुदीरयन् ।  
 प्रलयस्थितिसर्गाणामेकः कारणतां गतः ॥ 2.6 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-हे अज ! अपाम् अन्तः यत् अमोघं बीजम् उत्पम् । अतः चराऽचरं विश्वं, तस्य प्रभवो गीयसे ।  
-</details>
-मल्लिo- यदिति ॥ न जायत इत्यजः । हे अज, अपां जलानामन्तस्त्वया यदमोघमवन्ध्यं बीजं वीर्यमुप्तं निक्षिप्तं । 'मुक्तम्' इति पाठे विसृष्टमित्यर्थः । 'शुक्रं तेजोरेतसी च बीजवीर्येन्द्रियाणि च' इत्यमरः । अतस्ते बीजाच्चराचरं स्थावरजङ्गमात्मकम् । समाहारे व्दन्व्दैकवद्भावः । विश्वं जगत् । उत्पन्नमिति शेषः । तस्य विश्वस्य । प्रभवत्यस्मादिति प्रभवः कारणं गीयसे । 'अदश्चराचरं विश्वं प्रसवस्तस्त गीयते' इति पाठे अद इदं चराचरं विश्वं तस्य बीजस्य प्रसवो गीयते । लोक इति शेषः । अत्र मनुः- अप एव  ससर्जादौ तासु बीजमवासृजत् । तदण्डमभवद्धैमं सहस्त्रांशुसमप्रभम् ॥ इति ॥ 2.5. ॥  
 तिसृभिस्त्वमवस्थाभिर्महिमानमुदीरयन् ।  
-प्रलयस्थितिसर्गाणामेकः कारणतां गतः ॥ 2.6 ॥  
+प्रलयस्थितिसर्गाणामेकः कारणतां गतः ॥ 2.6 ॥
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -223,20 +226,23 @@ title = "०२"
 
 <details><summary>अन्वयः</summary>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
-
 (हे भगवन् !) त्वम् आत्मानम् आत्मना वेत्सि, आत्मानम् आत्मना सृजसि, त्वं कृतिना आत्मना आत्मनि एव प्रलीयसे ।  
 </details>
-मल्लिo- आत्मानमिति ॥ हे भगवन्, त्वमात्मानं लोकानुग्रहार्थं ब्रह्मरुपेणोत्पिपादयिषितं स्वस्वरुपमात्मनैव वेत्सि जानासि । सर्वापि क्रिया कर्तव्यार्थज्ञानपूर्विकेति भावः । तथात्मानमात्मनैव । आत्मन्येवेत्यत्रापि संबध्यते । स्वस्मिन्नेव सृजसि । अधिष्ठानमपि स्वयमेवेत्यर्थः । 'स्वेमहिम्नि प्रतिष्ठिनम्' इति श्रुतेः । कृतिना समर्थेन । इदं सर्वत्र सम्बध्यते । आत्मना स्वेनैवात्मन्येव प्रलीयसे स्वस्मिन्नेव' प्रलीनो भवसि । लीयतेर्दैवादिकात्कर्तरि लट् । 'प्रकृत्यादिभ्य उपसंख्यानम्' इति वार्तिकात्सर्वत्रात्मनेति तृतिया । न हि ते प्रपञ्चस्येव ज्ञानोत्पत्तिलयेषु परापेक्षेति फलितार्थः ।  
+
+<details><summary>मल्लिनाथः</summary>
+
+आत्मानमिति ॥ हे भगवन्, त्वमात्मानं लोकानुग्रहार्थं ब्रह्मरुपेणोत्पिपादयिषितं स्वस्वरुपमात्मनैव वेत्सि जानासि । सर्वापि क्रिया कर्तव्यार्थज्ञानपूर्विकेति भावः । तथात्मानमात्मनैव । आत्मन्येवेत्यत्रापि संबध्यते । स्वस्मिन्नेव सृजसि । अधिष्ठानमपि स्वयमेवेत्यर्थः । 'स्वेमहिम्नि प्रतिष्ठिनम्' इति श्रुतेः । कृतिना समर्थेन । इदं सर्वत्र सम्बध्यते । आत्मना स्वेनैवात्मन्येव प्रलीयसे स्वस्मिन्नेव' प्रलीनो भवसि । लीयतेर्दैवादिकात्कर्तरि लट् । 'प्रकृत्यादिभ्य उपसंख्यानम्' इति वार्तिकात्सर्वत्रात्मनेति तृतिया । न हि ते प्रपञ्चस्येव ज्ञानोत्पत्तिलयेषु परापेक्षेति फलितार्थः ।
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 द्रवा संघातकठिनः, स्थूलः सूक्ष्मो लघुर्गुरुः ।  
 व्यक्तो व्यक्तेतरश्चासि प्राकाम्यं ते विभूतिषु ॥ 2.11 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-(हे भगवन् !) त्वम् आत्मानम् आत्मना वेत्सि, आत्मानम् आत्मना सृजसि, त्वं कृतिना आत्मना आत्मनि एव प्रलीयसे ।  
-</details>
-मल्लिo- आत्मानमिति ॥ हे भगवन्, त्वमात्मानं लोकानुग्रहार्थं ब्रह्मरुपेणोत्पिपादयिषितं स्वस्वरुपमात्मनैव वेत्सि जानासि । सर्वापि क्रिया कर्तव्यार्थज्ञानपूर्विकेति भावः । तथात्मानमात्मनैव । आत्मन्येवेत्यत्रापि संबध्यते । स्वस्मिन्नेव सृजसि । अधिष्ठानमपि स्वयमेवेत्यर्थः । 'स्वेमहिम्नि प्रतिष्ठिनम्' इति श्रुतेः । कृतिना समर्थेन । इदं सर्वत्र सम्बध्यते । आत्मना स्वेनैवात्मन्येव प्रलीयसे स्वस्मिन्नेव' प्रलीनो भवसि । लीयतेर्दैवादिकात्कर्तरि लट् । 'प्रकृत्यादिभ्य उपसंख्यानम्' इति वार्तिकात्सर्वत्रात्मनेति तृतिया । न हि ते प्रपञ्चस्येव ज्ञानोत्पत्तिलयेषु परापेक्षेति फलितार्थः ।  
 द्रवा संघातकठिनः, स्थूलः सूक्ष्मो लघुर्गुरुः ।  
 व्यक्तो व्यक्तेतरश्चासि प्राकाम्यं ते विभूतिषु ॥ 2.11 ॥  
 </details>
