--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/03.md
@@ -271,20 +271,24 @@ title = "०३"
 
 <details><summary>अन्वयः</summary>
 
+सखे ! सर्वम् एतत् त्वयि उपपन्नम्, मम कुलिशं भवांश्च उभे अस्त्रे । वज्रं तपोवीर्यमहत्सु कुण्ठम् । त्वं सर्वतोगामि साधकं च ।
+</details>
+
+<details><summary>मल्लिनाथः</summary>
+
+सर्वमिति ॥ हे सखे ! सखे इति संबोधनं गौरवार्थम् । सर्वमेतत्त्वय्युपपन्नं सिद्धंम् । मम कुलिशं वज्रं भवांश्चोभे अस्त्रे । तत्र वज्रं तपोवीर्येण तपोबलेन महत्सु प्रबलेषु कुण्ठं प्रतिबद्धप्रसरम् । त्वमस्त्रं पर्वतोगामि च साधकं च । तापसेष्वप्यकुण्ठमित्यर्थः ॥ 3.12 ।  
+</details>
+
+
+
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सखे ! सर्वम् एतत् त्वयि उपपन्नम्, मम कुलिशं भवांश्च उभे अस्त्रे । वज्रं तपोवीर्यमहत्सु कुण्ठम् । त्वं सर्वतोगामि साधकं च ।  
-</details>
-मल्लिo- सर्वमिति ॥ हे सखे ! सखे इति संबोधनं गौरवार्थम् । सर्वमेतत्त्वय्युपपन्नं सिद्धंम् । मम कुलिशं वज्रं भवांश्चोभे अस्त्रे । तत्र वज्रं तपोवीर्येण तपोबलेन महत्सु प्रबलेषु कुण्ठं प्रतिबद्धप्रसरम् । त्वमस्त्रं पर्वतोगामि च साधकं च । तापसेष्वप्यकुण्ठमित्यर्थः ॥ 3.12 ।  
 अवैमि ते सारमतः खलु त्वां कार्ये गुरुण्यात्मसमं नियोक्ष्ये ।  
 व्यादिश्यते भूधरतामवेक्ष्य कृष्णेन देहोद्वहनाय शेषः ॥ 3.13 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-सखे ! सर्वम् एतत् त्वयि उपपन्नम्, मम कुलिशं भवांश्च उभे अस्त्रे । वज्रं तपोवीर्यमहत्सु कुण्ठम् । त्वं सर्वतोगामि साधकं च ।  
-</details>
-मल्लिo- सर्वमिति ॥ हे सखे ! सखे इति संबोधनं गौरवार्थम् । सर्वमेतत्त्वय्युपपन्नं सिद्धंम् । मम कुलिशं वज्रं भवांश्चोभे अस्त्रे । तत्र वज्रं तपोवीर्येण तपोबलेन महत्सु प्रबलेषु कुण्ठं प्रतिबद्धप्रसरम् । त्वमस्त्रं पर्वतोगामि च साधकं च । तापसेष्वप्यकुण्ठमित्यर्थः ॥ 3.12 ।  
 अवैमि ते सारमतः खलु त्वां कार्ये गुरुण्यात्मसमं नियोक्ष्ये ।  
 व्यादिश्यते भूधरतामवेक्ष्य कृष्णेन देहोद्वहनाय शेषः ॥ 3.13 ॥  
 </details>
