--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/06.md
@@ -111,20 +111,23 @@ title = "०६"
 
 <details><summary>अन्वयः</summary>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
-
 तीरमन्दारकुसुमोत्किरवीचिषु दिङ्नागमदगन्धिषु व्योमगङ्गाप्रवाहेषु आप्लुताः (ते प्रादुरासन्) ।  
 </details>
-मल्लिo- आप्लुता इति । उत्किरन्ति विक्षिपन्तीत्युत्किराः । 'इगुपधे-' त्यादिना कप्रत्ययः । तीरे ये मन्दाराः कल्पवृक्षास्तेषां कुसुमानामुत्किरा वीचयस्तरङ्गा येषां तेषु दिङ्नागानां दिग्गजानां मदगन्धो येष्विति तथोक्तेषु व्योमगङ्गाप्रवाहेष्वाकाशगङ्गास्त्रीतःस्वाप्लुताः स्नाताः ।  
+
+<details><summary>मल्लिनाथः</summary>
+
+आप्लुता इति । उत्किरन्ति विक्षिपन्तीत्युत्किराः । 'इगुपधे-' त्यादिना कप्रत्ययः । तीरे ये मन्दाराः कल्पवृक्षास्तेषां कुसुमानामुत्किरा वीचयस्तरङ्गा येषां तेषु दिङ्नागानां दिग्गजानां मदगन्धो येष्विति तथोक्तेषु व्योमगङ्गाप्रवाहेष्वाकाशगङ्गास्त्रीतःस्वाप्लुताः स्नाताः ।  
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 मुक्तायज्ञोपवीतानि बिभ्रतो हैमवल्कलाः ।  
 रत्नाक्षसूत्राः प्रव्रज्यां कल्पवृक्षा इवाश्रिताः ॥ 6.6 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-तीरमन्दारकुसुमोत्किरवीचिषु दिङ्नागमदगन्धिषु व्योमगङ्गाप्रवाहेषु आप्लुताः (ते प्रादुरासन्) ।  
-</details>
-मल्लिo- आप्लुता इति । उत्किरन्ति विक्षिपन्तीत्युत्किराः । 'इगुपधे-' त्यादिना कप्रत्ययः । तीरे ये मन्दाराः कल्पवृक्षास्तेषां कुसुमानामुत्किरा वीचयस्तरङ्गा येषां तेषु दिङ्नागानां दिग्गजानां मदगन्धो येष्विति तथोक्तेषु व्योमगङ्गाप्रवाहेष्वाकाशगङ्गास्त्रीतःस्वाप्लुताः स्नाताः ।  
 मुक्तायज्ञोपवीतानि बिभ्रतो हैमवल्कलाः ।  
 रत्नाक्षसूत्राः प्रव्रज्यां कल्पवृक्षा इवाश्रिताः ॥ 6.6 ॥  
 </details>
@@ -537,7 +540,6 @@ title = "०६"
 
 अथवा हे देव ! सुमहती एषा प्रार्थना तिष्ठतु । चिन्तितोपस्थितान् नः तावत् शाधि । किं करवाम ?  
 </details>
-मल्लिo- अथवेति । अथवा हे देव ! सुमहती एषा प्रार्थना तिष्ठतु । चिन्तितोपस्थितान् नः तावत् शाधि । किं करवाम ?  
 
 <details><summary>मल्लिनाथः</summary>
 
@@ -580,22 +582,26 @@ title = "०६"
 
 <details><summary>अन्वयः</summary>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
-
 (हे मुनयः !) काश्चित् मे प्रवृत्तयः स्वार्था न, वो विदितं । अष्टाभिः मूर्तिभिः इत्थंभूतः सूचितः अस्मि ।  
 </details>
-मल्लिo- विदितमिति । हे मुनयः ! काश्चिदपि मे प्रवृत्तयो व्यापाराः स्वार्था न भवन्ति यथा तथा वो युष्माकं विदितम् । वाक्यार्थः कर्म । बुद्धर्थत्वाद्वर्तमाने क्तः, तद्योगात्षष्ठी । प्रवृत्तिपारार्थ्ये प्रमाणमाह-अष्टाभिर्मूर्तिभिरित्थंभूतं इमं प्रकारं परार्थप्रवृत्तिरुपं प्राप्तः । 'भू प्राप्तो' इति धातोः कर्तरि क्तः । सूचितो ज्ञापितोऽस्मि । मत्स्वमूर्तिचेष्टया स्वपारार्थ्यमनुमेयमित्यर्थः ।  
+
+<details><summary>मल्लिनाथः</summary>
+
+विदितमिति । हे मुनयः ! काश्चिदपि मे प्रवृत्तयो व्यापाराः स्वार्था न भवन्ति यथा तथा वो युष्माकं विदितम् । वाक्यार्थः कर्म । बुद्धर्थत्वाद्वर्तमाने क्तः, तद्योगात्षष्ठी । प्रवृत्तिपारार्थ्ये प्रमाणमाह-अष्टाभिर्मूर्तिभिरित्थंभूतं इमं प्रकारं परार्थप्रवृत्तिरुपं प्राप्तः । 'भू प्राप्तो' इति धातोः कर्तरि क्तः । सूचितो ज्ञापितोऽस्मि । मत्स्वमूर्तिचेष्टया स्वपारार्थ्यमनुमेयमित्यर्थः ।  
+</details>
+
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 सोऽहं तृष्णातुरैर्वृर्ष्टि, विद्युत्वानिव चातकैः ।  
 अरिविप्रकृतैर्देवैः प्रसूतिं प्रति याचितः ॥ 6.27 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-(हे मुनयः !) काश्चित् मे प्रवृत्तयः स्वार्था न, वो विदितं । अष्टाभिः मूर्तिभिः इत्थंभूतः सूचितः अस्मि ।  
-</details>
-मल्लिo- विदितमिति । हे मुनयः ! काश्चिदपि मे प्रवृत्तयो व्यापाराः स्वार्था न भवन्ति यथा तथा वो युष्माकं विदितम् । वाक्यार्थः कर्म । बुद्धर्थत्वाद्वर्तमाने क्तः, तद्योगात्षष्ठी । प्रवृत्तिपारार्थ्ये प्रमाणमाह-अष्टाभिर्मूर्तिभिरित्थंभूतं इमं प्रकारं परार्थप्रवृत्तिरुपं प्राप्तः । 'भू प्राप्तो' इति धातोः कर्तरि क्तः । सूचितो ज्ञापितोऽस्मि । मत्स्वमूर्तिचेष्टया स्वपारार्थ्यमनुमेयमित्यर्थः ।  
 सोऽहं तृष्णातुरैर्वृर्ष्टि, विद्युत्वानिव चातकैः ।  
-अरिविप्रकृतैर्देवैः प्रसूतिं प्रति याचितः ॥ 6.27 ॥  
+अरिविप्रकृतैर्देवैः प्रसूतिं प्रति याचितः ॥ 6.27 ॥
 </details>
 
 <details><summary>अन्वयः</summary>
