--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/07.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/07.md
@@ -1400,24 +1400,26 @@ title = "०७"
 
 <details><summary>अन्वयः</summary>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
-
 एकदृश्यं तं नयनैः पिबन्त्यो नार्यो विषयान्तराणि न जग्मुः, तथा हि-आसां शेषेन्द्रियवृत्तिः सर्वात्मना चक्षुः प्रविष्टा इव ।  
 </details>
-मल्लिo- तमिति । एक एव दृश्यो दर्शनीयस्तमेकदृश्यं तमीश्वरं नयनैः पिबन्त्यः । अतितृष्णया पश्यन्त इत्यर्थः । 'ताः शंकरं दृष्टिभिरापिबन्त्यः' इति वा पाठः । नार्यो विषान्तराणि ततोऽन्यान्विषयान् । शब्दादीनित्यर्थः । न जग्मुः । न विदुरित्यर्थः । तथाहि । आसां नारीणां शेषेन्द्रियवृत्तिः श्रोत्रादिप्रवृत्तिः सर्वात्मना स्वरुपकार्त्स्न्येन चक्षुः प्रिविष्टेव । श्रोत्रादीनीन्द्रियाणि स्वातन्त्र्येण ग्रहणाशक्तेश्चक्षुरेव प्रविश्य कौतुकात्स्वयमप्येनमुपलभन्ते किमु । अन्यथा स्वस्वविषयाधिगमः किं न स्यादिति भावः ।  
+
+<details><summary>मल्लिनाथः</summary>
+
+तमिति । एक एव दृश्यो दर्शनीयस्तमेकदृश्यं तमीश्वरं नयनैः पिबन्त्यः । अतितृष्णया पश्यन्त इत्यर्थः । 'ताः शंकरं दृष्टिभिरापिबन्त्यः' इति वा पाठः । नार्यो विषान्तराणि ततोऽन्यान्विषयान् । शब्दादीनित्यर्थः । न जग्मुः । न विदुरित्यर्थः । तथाहि । आसां नारीणां शेषेन्द्रियवृत्तिः श्रोत्रादिप्रवृत्तिः सर्वात्मना स्वरुपकार्त्स्न्येन चक्षुः प्रिविष्टेव । श्रोत्रादीनीन्द्रियाणि स्वातन्त्र्येण ग्रहणाशक्तेश्चक्षुरेव प्रविश्य कौतुकात्स्वयमप्येनमुपलभन्ते किमु । अन्यथा स्वस्वविषयाधिगमः किं न स्यादिति भावः ।  
 अथ पौराङ्गनावचनान्याह--  
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 स्थाने तपो दुश्चरमेतदर्थमपर्णया पेलवयापि तप्तम् ।  
 या दास्यमप्यस्य लभेत नारी सा स्यात्कृतार्था किमुताङ्कशय्याम् ॥ 7.65 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-एकदृश्यं तं नयनैः पिबन्त्यो नार्यो विषयान्तराणि न जग्मुः, तथा हि-आसां शेषेन्द्रियवृत्तिः सर्वात्मना चक्षुः प्रविष्टा इव ।  
-</details>
-मल्लिo- तमिति । एक एव दृश्यो दर्शनीयस्तमेकदृश्यं तमीश्वरं नयनैः पिबन्त्यः । अतितृष्णया पश्यन्त इत्यर्थः । 'ताः शंकरं दृष्टिभिरापिबन्त्यः' इति वा पाठः । नार्यो विषान्तराणि ततोऽन्यान्विषयान् । शब्दादीनित्यर्थः । न जग्मुः । न विदुरित्यर्थः । तथाहि । आसां नारीणां शेषेन्द्रियवृत्तिः श्रोत्रादिप्रवृत्तिः सर्वात्मना स्वरुपकार्त्स्न्येन चक्षुः प्रिविष्टेव । श्रोत्रादीनीन्द्रियाणि स्वातन्त्र्येण ग्रहणाशक्तेश्चक्षुरेव प्रविश्य कौतुकात्स्वयमप्येनमुपलभन्ते किमु । अन्यथा स्वस्वविषयाधिगमः किं न स्यादिति भावः ।  
-अथ पौराङ्गनावचनान्याह--  
 स्थाने तपो दुश्चरमेतदर्थमपर्णया पेलवयापि तप्तम् ।  
-या दास्यमप्यस्य लभेत नारी सा स्यात्कृतार्था किमुताङ्कशय्याम् ॥ 7.65 ॥  
+या दास्यमप्यस्य लभेत नारी सा स्यात्कृतार्था किमुताङ्कशय्याम् ॥ 7.65 ॥
 </details>
 
 <details><summary>अन्वयः</summary>
