--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/13.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/13.md
@@ -232,12 +232,18 @@ title = "१३"
 
 <details><summary>अन्वयः</summary>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
-
 सङ्गरकेलिलालसः मरुत् क्षणात् दिगम्बराऽधिक्रमणोल्बणं महीयांसम् अरुद्धविक्रमं मृगम् अधिष्ठितः (सन्) महेशात्मजं द्रुतम् अन्वगात् ।  
 </details>
-सीo- दिगिति । संगरकेलौ संग्रामक्रीडायां लालसा कामो यस्य ।  
+
+<details><summary>सीतारामः</summary>
+
+दिगिति । संगरकेलौ संग्रामक्रीडायां लालसा कामो यस्य ।  
 'लालसौत्सुक्यतृष्णातिरेकयाच्ञासु च द्वयोः' । इति मेदिनी । तथाभूतो मरुत्पवनो वायुकोणाधीशः क्षणन्मुहूर्तमात्रेणैव । 'क्षणः पर्वोत्सवे च स्यात्तथा मानेऽप्यनेहसि' । इति मेदिनी । दिशामम्बरस्य च 'अम्बरं वाससि व्योम्नि' इति मेदिनी । अधिक्रमण आक्रमण उल्बणमुद्भटं महीयांसं महत्तरम् । अरुद्धोऽप्रतिरुद्धो विक्रमो विवत्पक्षिवत्क्रमः पादक्षेपो यस्य तथाभूतं मृगं हरिणम् 'मृघः पशौ कुरङ्गे च करिनक्षत्रभेदयोः' । इति मेदिनी । अधिष्ठितः सन् । तं महेशात्मजं कुमारं द्रुतं सत्वरमन्वगादनुजगाम ॥ 14.10 ॥  
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विरोधिनां (5)शोणितपारणैषिणीं गदामनूनां नरवाहनो वहन् ।  
 महाहवाम्भोधि(6) विगाहनोद्धतं यियासु(7) मन्वागमदीशनन्दनम् ॥ 14.11 ॥  
 {5.विग्रह.6.विगाहमान.7.अभ्यागमत्.}  
@@ -245,14 +251,11 @@ title = "१३"
 
 <details><summary>मूलम्</summary>
 
-सङ्गरकेलिलालसः मरुत् क्षणात् दिगम्बराऽधिक्रमणोल्बणं महीयांसम् अरुद्धविक्रमं मृगम् अधिष्ठितः (सन्) महेशात्मजं द्रुतम् अन्वगात् ।  
-</details>
-सीo- दिगिति । संगरकेलौ संग्रामक्रीडायां लालसा कामो यस्य ।  
-'लालसौत्सुक्यतृष्णातिरेकयाच्ञासु च द्वयोः' । इति मेदिनी । तथाभूतो मरुत्पवनो वायुकोणाधीशः क्षणन्मुहूर्तमात्रेणैव । 'क्षणः पर्वोत्सवे च स्यात्तथा मानेऽप्यनेहसि' । इति मेदिनी । दिशामम्बरस्य च 'अम्बरं वाससि व्योम्नि' इति मेदिनी । अधिक्रमण आक्रमण उल्बणमुद्भटं महीयांसं महत्तरम् । अरुद्धोऽप्रतिरुद्धो विक्रमो विवत्पक्षिवत्क्रमः पादक्षेपो यस्य तथाभूतं मृगं हरिणम् 'मृघः पशौ कुरङ्गे च करिनक्षत्रभेदयोः' । इति मेदिनी । अधिष्ठितः सन् । तं महेशात्मजं कुमारं द्रुतं सत्वरमन्वगादनुजगाम ॥ 14.10 ॥  
 विरोधिनां (5)शोणितपारणैषिणीं गदामनूनां नरवाहनो वहन् ।  
 महाहवाम्भोधि(6) विगाहनोद्धतं यियासु(7) मन्वागमदीशनन्दनम् ॥ 14.11 ॥  
 {5.विग्रह.6.विगाहमान.7.अभ्यागमत्.}  
 </details>
+
 
 <details><summary>अन्वयः</summary>
 
@@ -1128,12 +1131,17 @@ title = "१३"
 
 <details><summary>अन्वयः</summary>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
-
 चमूस्वनैः करालवाचालमुखाः ध्वस्ताऽम्बराः रजस्चला दिशः वीक्ष्य परितः गहनैः रजोऽन्धकारैः असौ दिनेश्वरः कुतः अपि तिरोबभूव ।  
 </details>
-सीo- करालेति । चमूस्वनैः सेनाघोषैः करालानि वाचालानि च मुखानि प्रारम्भाः । 'मुखं निःसरणे वक्रे प्रारम्भोपाययोरपि' इति मेदिनी । तथा ध्वस्तं रजोव्याप्तमम्बरं यासाम् । तथा रजस्वला रजोयुक्ता दिशो वीक्ष्य परितो गहनैः सघनैः रजोन्धकारैः कर्तृभिः । असौ दिनेश्वरः सूर्यः कुतोऽपि कुत्रापि तिरोबभूवे तिरोगमितः । अन्तर्हित इत्यर्थः । 'भूङ्गतौ' इत्यतो लिट् । 'भू प्राप्तौ' इत्यतो वा । वीक्ष्येवेति गम्योत्प्रेक्षा । अथ द्वितीयपक्षे-रजस्वला आर्तववतीः । अत एव कराला भीषणा वाचां वाणीमलान्यगृह्णान्ति मुखानि यासाम् । ततो विशेषणसमासः । मौनव्रतधारिणीरित्यर्थः । तथा ध्वस्ताम्बराः स्त्रस्तशाटिकाः । नग्ना इत्यर्थः । एवं भूता चमूर्योषितः । 'चमूः सेनाविशेषे च सेनामात्रे च योषिति' । इति मेदिनी । वीक्ष्य रजस्यार्तवविषयेऽन्धकारोऽ  
-न्धवत्कारः कृतिः । क्रिया इति यावत् । भावे घ़ञ् । आर्तवमपत्रपद्भिरित्यर्थः, रजस्वलादर्शननिषेघात् । गहनैर्गहनमनोभिः सद्भिरित्यर्थः । दिनेश्वरः कश्चित्पुरुषः कुतोऽपि कुत्रापि तिरोभूयते, कश्चिदसत्पुरुषो रजस्वलां पश्यन्नपि सद्भिः करुणया पटादिभिस्तिरोधीयते तद्वदित्यर्थः ॥ 14.48 ॥  
+
+<details><summary>सीतारामः</summary>
+
+करालेति । चमूस्वनैः सेनाघोषैः करालानि वाचालानि च मुखानि प्रारम्भाः । 'मुखं निःसरणे वक्रे प्रारम्भोपाययोरपि' इति मेदिनी । तथा ध्वस्तं रजोव्याप्तमम्बरं यासाम् । तथा रजस्वला रजोयुक्ता दिशो वीक्ष्य परितो गहनैः सघनैः रजोन्धकारैः कर्तृभिः । असौ दिनेश्वरः सूर्यः कुतोऽपि कुत्रापि तिरोबभूवे तिरोगमितः । अन्तर्हित इत्यर्थः । 'भूङ्गतौ' इत्यतो लिट् । 'भू प्राप्तौ' इत्यतो वा । वीक्ष्येवेति गम्योत्प्रेक्षा । अथ द्वितीयपक्षे-रजस्वला आर्तववतीः । अत एव कराला भीषणा वाचां वाणीमलान्यगृह्णान्ति मुखानि यासाम् । ततो विशेषणसमासः । मौनव्रतधारिणीरित्यर्थः । तथा ध्वस्ताम्बराः स्त्रस्तशाटिकाः । नग्ना इत्यर्थः । एवं भूता चमूर्योषितः । 'चमूः सेनाविशेषे च सेनामात्रे च योषिति' । इति मेदिनी । वीक्ष्य रजस्यार्तवविषयेऽन्धकारोऽन्धवत्कारः कृतिः । क्रिया इति यावत् । भावे घ़ञ् । आर्तवमपत्रपद्भिरित्यर्थः, रजस्वलादर्शननिषेघात् । गहनैर्गहनमनोभिः सद्भिरित्यर्थः । दिनेश्वरः कश्चित्पुरुषः कुतोऽपि कुत्रापि तिरोभूयते, कश्चिदसत्पुरुषो रजस्वलां पश्यन्नपि सद्भिः करुणया पटादिभिस्तिरोधीयते तद्वदित्यर्थः ॥ 14.48 ॥  
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 आक्रान्तपूर्वा रभसेन सैनिकैर्दिगङ्गना व्योम रजोभिदूषिता ।  
 भेरोरवाणां प्रतिशब्दितैर्घनैर्जगर्ज गाढं (1)घनमत्सरादिव ॥ 14.49 ॥  
 {1.गुरुमत्सरादिव.}  
@@ -1141,14 +1149,11 @@ title = "१३"
 
 <details><summary>मूलम्</summary>
 
-चमूस्वनैः करालवाचालमुखाः ध्वस्ताऽम्बराः रजस्चला दिशः वीक्ष्य परितः गहनैः रजोऽन्धकारैः असौ दिनेश्वरः कुतः अपि तिरोबभूव ।  
-</details>
-सीo- करालेति । चमूस्वनैः सेनाघोषैः करालानि वाचालानि च मुखानि प्रारम्भाः । 'मुखं निःसरणे वक्रे प्रारम्भोपाययोरपि' इति मेदिनी । तथा ध्वस्तं रजोव्याप्तमम्बरं यासाम् । तथा रजस्वला रजोयुक्ता दिशो वीक्ष्य परितो गहनैः सघनैः रजोन्धकारैः कर्तृभिः । असौ दिनेश्वरः सूर्यः कुतोऽपि कुत्रापि तिरोबभूवे तिरोगमितः । अन्तर्हित इत्यर्थः । 'भूङ्गतौ' इत्यतो लिट् । 'भू प्राप्तौ' इत्यतो वा । वीक्ष्येवेति गम्योत्प्रेक्षा । अथ द्वितीयपक्षे-रजस्वला आर्तववतीः । अत एव कराला भीषणा वाचां वाणीमलान्यगृह्णान्ति मुखानि यासाम् । ततो विशेषणसमासः । मौनव्रतधारिणीरित्यर्थः । तथा ध्वस्ताम्बराः स्त्रस्तशाटिकाः । नग्ना इत्यर्थः । एवं भूता चमूर्योषितः । 'चमूः सेनाविशेषे च सेनामात्रे च योषिति' । इति मेदिनी । वीक्ष्य रजस्यार्तवविषयेऽन्धकारोऽ  
-न्धवत्कारः कृतिः । क्रिया इति यावत् । भावे घ़ञ् । आर्तवमपत्रपद्भिरित्यर्थः, रजस्वलादर्शननिषेघात् । गहनैर्गहनमनोभिः सद्भिरित्यर्थः । दिनेश्वरः कश्चित्पुरुषः कुतोऽपि कुत्रापि तिरोभूयते, कश्चिदसत्पुरुषो रजस्वलां पश्यन्नपि सद्भिः करुणया पटादिभिस्तिरोधीयते तद्वदित्यर्थः ॥ 14.48 ॥  
 आक्रान्तपूर्वा रभसेन सैनिकैर्दिगङ्गना व्योम रजोभिदूषिता ।  
 भेरोरवाणां प्रतिशब्दितैर्घनैर्जगर्ज गाढं (1)घनमत्सरादिव ॥ 14.49 ॥  
 {1.गुरुमत्सरादिव.}  
 </details>
+
 
 <details><summary>अन्वयः</summary>
 
