--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/01.md
@@ -117,23 +117,26 @@ title = "०१"
 
 <details><summary>अन्वयः</summary>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
-
 अनन्तरत्नप्रभवस्य यस्य हिमं सौभाग्यविलोपि न जातम् । हि एको दोषो गुणसन्निपाते इन्दोः किरणेषु अङ्क इव निमज्जति ।  
 </details>
-मल्लिo -अनन्तेति ॥ प्रभवत्यस्मादिति प्रभवः कारणम् । अनन्तानामपरिमितानां रत्नानां श्रेष्ठवस्तूनां प्रभवस्य यस्य हिमाद्रेर्हिमम् । कर्तृ । सुभगस्य भावः सौभाग्यम्स । 'हद्भगसिन्ध्वन्ते पूर्वपदस्य च ' हत्युभयपदवृध्दिः । तव्दिलुम्पतीति सौभाग्यविलोपि सौन्दर्यविधातकं न जातं नाभूत् । तथाहि । एको दोषो गुणसंनिपात इन्दोः किरणेष्वङ्क इव निमज्जति । अन्तर्लियत इत्यर्थः । नहि स्वल्पो दोषोऽमितगुणाभिभावक एव किंतु कश्चिदिन्दुकलङ्कादिवद्गुणैरभिभूयते । अन्यथा सर्वरम्यवस्तुहानिप्रसङ्गादिति भावः । अत्रोपमानुप्राणितोऽर्थान्तरन्यासालंकारः । तल्लक्षणं तु-'ज्ञेयः सोऽर्यान्तरन्चासो वस्तु प्रस्तुत्य किंचन । तत्साधनसमर्थस्य न्यासो योऽन्यस्य वस्तुनः ॥ ' इति दण्डी ॥ 1. 3 ॥    
+
+<details><summary>मल्लिनाथः</summary>
+
+अनन्तेति ॥ प्रभवत्यस्मादिति प्रभवः कारणम् । अनन्तानामपरिमितानां रत्नानां श्रेष्ठवस्तूनां प्रभवस्य यस्य हिमाद्रेर्हिमम् । कर्तृ । सुभगस्य भावः सौभाग्यम्स । 'हद्भगसिन्ध्वन्ते पूर्वपदस्य च ' हत्युभयपदवृध्दिः । तव्दिलुम्पतीति सौभाग्यविलोपि सौन्दर्यविधातकं न जातं नाभूत् । तथाहि । एको दोषो गुणसंनिपात इन्दोः किरणेष्वङ्क इव निमज्जति । अन्तर्लियत इत्यर्थः । नहि स्वल्पो दोषोऽमितगुणाभिभावक एव किंतु कश्चिदिन्दुकलङ्कादिवद्गुणैरभिभूयते । अन्यथा सर्वरम्यवस्तुहानिप्रसङ्गादिति भावः । अत्रोपमानुप्राणितोऽर्थान्तरन्यासालंकारः । तल्लक्षणं तु-'ज्ञेयः सोऽर्यान्तरन्चासो वस्तु प्रस्तुत्य किंचन । तत्साधनसमर्थस्य न्यासो योऽन्यस्य वस्तुनः ॥ ' इति दण्डी ॥ 1. 3 ॥    
+</details>
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 यश्चाप्सरोविभ्रममण्डनानां संपादयित्रीं शीखरैबिभर्ति ।  
 ।लाहकच्छेदविभक्तरागामकालसंध्यामिव धातुमत्ताम् ॥ 1.4 ॥   
 </details>
 
 <details><summary>मूलम्</summary>
 
-अनन्तरत्नप्रभवस्य यस्य हिमं सौभाग्यविलोपि न जातम् । हि एको दोषो गुणसन्निपाते इन्दोः किरणेषु अङ्क इव निमज्जति ।  
-</details>
-मल्लिo -अनन्तेति ॥ प्रभवत्यस्मादिति प्रभवः कारणम् । अनन्तानामपरिमितानां रत्नानां श्रेष्ठवस्तूनां प्रभवस्य यस्य हिमाद्रेर्हिमम् । कर्तृ । सुभगस्य भावः सौभाग्यम्स । 'हद्भगसिन्ध्वन्ते पूर्वपदस्य च ' हत्युभयपदवृध्दिः । तव्दिलुम्पतीति सौभाग्यविलोपि सौन्दर्यविधातकं न जातं नाभूत् । तथाहि । एको दोषो गुणसंनिपात इन्दोः किरणेष्वङ्क इव निमज्जति । अन्तर्लियत इत्यर्थः । नहि स्वल्पो दोषोऽमितगुणाभिभावक एव किंतु कश्चिदिन्दुकलङ्कादिवद्गुणैरभिभूयते । अन्यथा सर्वरम्यवस्तुहानिप्रसङ्गादिति भावः । अत्रोपमानुप्राणितोऽर्थान्तरन्यासालंकारः । तल्लक्षणं तु-'ज्ञेयः सोऽर्यान्तरन्चासो वस्तु प्रस्तुत्य किंचन । तत्साधनसमर्थस्य न्यासो योऽन्यस्य वस्तुनः ॥ ' इति दण्डी ॥ 1. 3 ॥    
 यश्चाप्सरोविभ्रममण्डनानां संपादयित्रीं शीखरैबिभर्ति ।  
-।लाहकच्छेदविभक्तरागामकालसंध्यामिव धातुमत्ताम् ॥ 1.4 ॥   
+।लाहकच्छेदविभक्तरागामकालसंध्यामिव धातुमत्ताम् ॥ 1.4 ॥
 </details>
+
 
 <details><summary>अन्वयः</summary>
 
@@ -162,10 +165,24 @@ title = "०१"
 सिध्दा आमेखलं सञ्चरतां धनानाम् अधः सानुगतां छायां निषेव्य वृष्टिभिः उव्देजिताः (सन्तः)यस्य आतपवन्ति श्रृङ्गाणि आश्रयन्ते ।  
 </details>
 
-मल्लिo- आमेखलमिति ॥ सिध्दा अणिमादिसिध्दा देवयोनिविशेषाश्च । 'पिशाचो गुह्यकः सिध्दो भूतोऽमी देवयोनयः'। इत्यमरः । आमेखलाभ्य आमेखलं नितम्बपर्यन्तम् । 'मेखला खण्डबन्धे स्यात्काञ्चौशैलनितम्बयोः' इति विश्वः । 'आङ्मर्यादाभिविध्योः' इत्यव्ययीभावः । संचरतां धनानां मेधानामधः सानूनि मेधमण्डलादवस्तटानि गतां प्रात्पाम् । 'व्दितीया श्रितातोतपतितगतात्यस्तप्रात्पापन्तैः' इति समासः । छायामनातपम् । 'छाया सूर्यप्रिया कान्तिः प्रतिबिम्बमनातपः'। इत्यमरः । निषेव्यवृष्टिभिरुव्देजिताः = क्लेशिताः सन्तः । 'उव्देगस्तिमिते क्लेशे भये मन्थरगामिनि' इति शर्ब्दाणवः । यस्य हिमाद्रेरातपवन्ति सातपानि श्रृङ्गाष्याश्रयन्ते । आश्रित्य स्थिता इत्यर्थः । अतिमेघमण्डलमस्यौन्नत्यमिति भावः ।      
-पदं तुषारस्त्रुतिधैतरक्तं यस्मिन्नदृष्ट्वापि हतव्दिपानाम् ।  
+<details><summary>मल्लिनाथः</summary>
 
+आमेखलमिति ॥ सिध्दा अणिमादिसिध्दा देवयोनिविशेषाश्च । 'पिशाचो गुह्यकः सिध्दो भूतोऽमी देवयोनयः'। इत्यमरः । आमेखलाभ्य आमेखलं नितम्बपर्यन्तम् । 'मेखला खण्डबन्धे स्यात्काञ्चौशैलनितम्बयोः' इति विश्वः । 'आङ्मर्यादाभिविध्योः' इत्यव्ययीभावः । संचरतां धनानां मेधानामधः सानूनि मेधमण्डलादवस्तटानि गतां प्रात्पाम् । 'व्दितीया श्रितातोतपतितगतात्यस्तप्रात्पापन्तैः' इति समासः । छायामनातपम् । 'छाया सूर्यप्रिया कान्तिः प्रतिबिम्बमनातपः'। इत्यमरः । निषेव्यवृष्टिभिरुव्देजिताः = क्लेशिताः सन्तः । 'उव्देगस्तिमिते क्लेशे भये मन्थरगामिनि' इति शर्ब्दाणवः । यस्य हिमाद्रेरातपवन्ति सातपानि श्रृङ्गाष्याश्रयन्ते । आश्रित्य स्थिता इत्यर्थः । अतिमेघमण्डलमस्यौन्नत्यमिति भावः ।
+</details>
+
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+पदं तुषारस्त्रुतिधैतरक्तं यस्मिन्नदृष्ट्वापि हतव्दिपानाम् ।  
 विदन्ति मार्गं नखरन्ध्रमुक्तैर्मुक्ताफलैः केसरिणां किराताः ॥ 1. 6 ॥   
+</details>
+
+<details><summary>मूलम्</summary>
+
+पदं तुषारस्त्रुतिधैतरक्तं यस्मिन्नदृष्ट्वापि हतव्दिपानाम् ।  
+विदन्ति मार्गं नखरन्ध्रमुक्तैर्मुक्ताफलैः केसरिणां किराताः ॥ 1. 6 ॥   
+</details>
 
 <details><summary>अन्वयः</summary>
 
@@ -279,23 +296,27 @@ title = "०१"
 
 <details><summary>अन्वयः</summary>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
-
 यत्र शिलीभूतहिमे अङ्गुलिपार्ष्णिभागान् उद्रेजयति मार्गे अपि श्रोणिपयोधरार्ताः अश्वमुख्यः मन्दां गतिं न भिन्दन्ति ।  
 </details>
-मल्लिo- उव्देजयतीति ॥ यत्र हिमाद्रौ । शिलीभूतं घनीभूतं हिमं यत्र तस्मिन् । अत एवाङ्गुलीनां पार्ष्णीनां च भागान्प्रदेशानुद्वेजयत्यतिक्लेशयत्यपि मार्गे ।श्रोणयश्च पयोधराश्च श्रोणिपयोधरम् । दुर्वहेण दुधंरेण श्रोणिपयोधरेणार्ताः पीडिताः । आङ्पूवद्दिच्छतेः क्तः । 'उपसर्गादृति धातौ' इति वृध्दिः । अश्वानां मुखानीव मुखानि यासां ता अश्वमुख्यः किंनरस्त्रियः । उष्ट्रमुखवत्समासः । 'स्यात्किंनरः किंपुरुषस्तुरंगवदनो मयुः'॥ इत्यमरः । मन्दां मन्थरां गतिं न भिन्दन्ति । न त्यजन्तीत्यर्थः । पादपीडाकरेऽप्यतिभारभङ्गुरशरीरतया न शीघ्रं गन्तुं शक्यत इति भावः   
+
+<details><summary>मल्लिनाथः</summary>
+
+उव्देजयतीति ॥ यत्र हिमाद्रौ । शिलीभूतं घनीभूतं हिमं यत्र तस्मिन् । अत एवाङ्गुलीनां पार्ष्णीनां च भागान्प्रदेशानुद्वेजयत्यतिक्लेशयत्यपि मार्गे ।श्रोणयश्च पयोधराश्च श्रोणिपयोधरम् । दुर्वहेण दुधंरेण श्रोणिपयोधरेणार्ताः पीडिताः । आङ्पूवद्दिच्छतेः क्तः । 'उपसर्गादृति धातौ' इति वृध्दिः । अश्वानां मुखानीव मुखानि यासां ता अश्वमुख्यः किंनरस्त्रियः । उष्ट्रमुखवत्समासः । 'स्यात्किंनरः किंपुरुषस्तुरंगवदनो मयुः'॥ इत्यमरः । मन्दां मन्थरां गतिं न भिन्दन्ति । न त्यजन्तीत्यर्थः । पादपीडाकरेऽप्यतिभारभङ्गुरशरीरतया न शीघ्रं गन्तुं शक्यत इति भावः
+</details>
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 दिवाकराद्रक्षति यो गुहासु लीनं दिवाभीतमिवान्धकारम् ।  
-क्षुद्रेऽपि नूनं शरणं प्रपन्ने ममत्वमुच्चैःशिरसां सतीव ॥ 1. 12 ॥   
+क्षुद्रेऽपि नूनं शरणं प्रपन्ने ममत्वमुच्चैःशिरसां सतीव ॥ 1. 12 ॥ 
 </details>
 
 <details><summary>मूलम्</summary>
 
-यत्र शिलीभूतहिमे अङ्गुलिपार्ष्णिभागान् उद्रेजयति मार्गे अपि श्रोणिपयोधरार्ताः अश्वमुख्यः मन्दां गतिं न भिन्दन्ति ।  
-</details>
-मल्लिo- उव्देजयतीति ॥ यत्र हिमाद्रौ । शिलीभूतं घनीभूतं हिमं यत्र तस्मिन् । अत एवाङ्गुलीनां पार्ष्णीनां च भागान्प्रदेशानुद्वेजयत्यतिक्लेशयत्यपि मार्गे ।श्रोणयश्च पयोधराश्च श्रोणिपयोधरम् । दुर्वहेण दुधंरेण श्रोणिपयोधरेणार्ताः पीडिताः । आङ्पूवद्दिच्छतेः क्तः । 'उपसर्गादृति धातौ' इति वृध्दिः । अश्वानां मुखानीव मुखानि यासां ता अश्वमुख्यः किंनरस्त्रियः । उष्ट्रमुखवत्समासः । 'स्यात्किंनरः किंपुरुषस्तुरंगवदनो मयुः'॥ इत्यमरः । मन्दां मन्थरां गतिं न भिन्दन्ति । न त्यजन्तीत्यर्थः । पादपीडाकरेऽप्यतिभारभङ्गुरशरीरतया न शीघ्रं गन्तुं शक्यत इति भावः   
 दिवाकराद्रक्षति यो गुहासु लीनं दिवाभीतमिवान्धकारम् ।  
-क्षुद्रेऽपि नूनं शरणं प्रपन्ने ममत्वमुच्चैःशिरसां सतीव ॥ 1. 12 ॥   
+क्षुद्रेऽपि नूनं शरणं प्रपन्ने ममत्वमुच्चैःशिरसां सतीव ॥ 1. 12 ॥ 
 </details>
+  
 
 <details><summary>अन्वयः</summary>
 
