--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/05.md
@@ -353,20 +353,24 @@ title = "०५"
 
 <details><summary>अन्वयः</summary>
 
-<details open><summary>विश्वास-प्रस्तुतिः</summary>
-
 कृताऽभिषेकां हुतजातवेदसं त्वगुत्तरासङ्गवतीम् अधीतिनीं तां दिदृक्षवः ऋषयः अभ्युपागमन्, धर्मवृद्धेषु वयो न समीक्ष्यते ।  
 </details>
-मल्लिo - कृतेति । कृताभिषेका कृतस्नानां हुतजातवेदसं हुताग्निकाम् । कृतहोमामित्यर्थः । त्वया वल्कलेनोत्तरासङ्गनतोमुत्तरीयवतीं त्वगृत्तरासङ्गवतीम् । अधीतमस्या अस्तीत्यधीतिनीं स्तुतिपाठादि कुर्वतीम् । 'इष्टादिभ्यश्च' इतीनिप्रत्ययः । तां देवीं दिदृक्षवा द्रषटुमिच्छव ऋषयो मुनयोऽभ्युपागमन्समुपागताः । न चात्र कनिष्ठसेवादोष इत्याह-धर्मवृद्धेषु वयो न समीक्ष्यते न प्रमाणीक्रियते । सति धर्मज्यैष्ठ्ये वयोज्यैष्ठ्यं न प्रयोजकमित्यर्थः । तथा च मनुः- 'न तेन वृद्धो भवति येनास्य पलितं शिरः । यो वा युवाप्यधीयानस्तं देवाः स्थविरं विदुः ॥' इति ॥ 5.16 ॥  
+
+<details><summary>मल्लिनाथः</summary>
+
+कृतेति । कृताभिषेका कृतस्नानां हुतजातवेदसं हुताग्निकाम् । कृतहोमामित्यर्थः । त्वया वल्कलेनोत्तरासङ्गनतोमुत्तरीयवतीं त्वगृत्तरासङ्गवतीम् । अधीतमस्या अस्तीत्यधीतिनीं स्तुतिपाठादि कुर्वतीम् । 'इष्टादिभ्यश्च' इतीनिप्रत्ययः । तां देवीं दिदृक्षवा द्रषटुमिच्छव ऋषयो मुनयोऽभ्युपागमन्समुपागताः । न चात्र कनिष्ठसेवादोष इत्याह-धर्मवृद्धेषु वयो न समीक्ष्यते न प्रमाणीक्रियते । सति धर्मज्यैष्ठ्ये वयोज्यैष्ठ्यं न प्रयोजकमित्यर्थः । तथा च मनुः- 'न तेन वृद्धो भवति येनास्य पलितं शिरः । यो वा युवाप्यधीयानस्तं देवाः स्थविरं विदुः ॥' इति ॥ 5.16 ॥  
+</details>
+
+
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 विरोधिसत्वोज्झ्तिपूर्वमत्सरं द्रुमैरभीष्टप्रसवार्चितातिथि ।  
 नवोटजाभ्यन्तरसंभृतानलं तपोवनं तच्च बभूव पावनम् ॥ 5.17 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-कृताऽभिषेकां हुतजातवेदसं त्वगुत्तरासङ्गवतीम् अधीतिनीं तां दिदृक्षवः ऋषयः अभ्युपागमन्, धर्मवृद्धेषु वयो न समीक्ष्यते ।  
-</details>
-मल्लिo - कृतेति । कृताभिषेका कृतस्नानां हुतजातवेदसं हुताग्निकाम् । कृतहोमामित्यर्थः । त्वया वल्कलेनोत्तरासङ्गनतोमुत्तरीयवतीं त्वगृत्तरासङ्गवतीम् । अधीतमस्या अस्तीत्यधीतिनीं स्तुतिपाठादि कुर्वतीम् । 'इष्टादिभ्यश्च' इतीनिप्रत्ययः । तां देवीं दिदृक्षवा द्रषटुमिच्छव ऋषयो मुनयोऽभ्युपागमन्समुपागताः । न चात्र कनिष्ठसेवादोष इत्याह-धर्मवृद्धेषु वयो न समीक्ष्यते न प्रमाणीक्रियते । सति धर्मज्यैष्ठ्ये वयोज्यैष्ठ्यं न प्रयोजकमित्यर्थः । तथा च मनुः- 'न तेन वृद्धो भवति येनास्य पलितं शिरः । यो वा युवाप्यधीयानस्तं देवाः स्थविरं विदुः ॥' इति ॥ 5.16 ॥  
 विरोधिसत्वोज्झ्तिपूर्वमत्सरं द्रुमैरभीष्टप्रसवार्चितातिथि ।  
 नवोटजाभ्यन्तरसंभृतानलं तपोवनं तच्च बभूव पावनम् ॥ 5.17 ॥  
 </details>
